[package]
name = "layaway"
version = "0.1.5"
edition = "2021"
description = "Layout creation for Sway via a relative and human-readable DSL."
repository = "https://github.com/MultisampledNight/layaway"
readme = true
license = "MIT OR Apache-2.0"
keywords = ["sway"]
categories = ["command-line-utilities", "config"]

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.4", features = ["derive"] }
directories-next = "2.0.0"
eyre = "0.6.12"
hostname = "0.4.0"
serde = { version = "1.0.202", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
swayipc = "3.0.2"
thiserror = "1.0.60"
toml = "0.8.13"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# The installers to generate for each app
installers = ["shell"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
cast_lossless = "allow"
